[gd_scene load_steps=4 format=3 uid="uid://dhi2e4527p0wh"]

[ext_resource type="Script" uid="uid://cg1k8n0g7hc81" path="res://scenes/ui/academy/settings_menu.gd" id="1_rmcjl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_32f6q"]
content_margin_left = 5.0
content_margin_top = 5.0
content_margin_right = 5.0
content_margin_bottom = 5.0
bg_color = Color(0.0846899, 0.0846899, 0.0846899, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kyy7q"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0

[node name="SettingsMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rmcjl")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_32f6q")

[node name="Description" type="Label" parent="MarginContainer/VBoxContainer/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "SETTINGS_TAB_GRAPHICS_DESCR"
autowrap_mode = 3

[node name="TabContainer" type="TabContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../HBoxContainer/BtnCancel")
theme_override_font_sizes/font_size = 25
current_tab = 0
tabs_position = 1

[node name="SETTINGS_TAB_GENERAL" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/SETTINGS_TAB_GENERAL"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_kyy7q")
horizontal_scroll_mode = 0

[node name="General" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/SETTINGS_TAB_GENERAL/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="SETTINGS_TAB_GRAPHICS" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/SETTINGS_TAB_GRAPHICS"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_kyy7q")
horizontal_scroll_mode = 0

[node name="Graphics" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/SETTINGS_TAB_GRAPHICS/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="SETTINGS_TAB_KEYBOARD" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/SETTINGS_TAB_KEYBOARD"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_kyy7q")
horizontal_scroll_mode = 0

[node name="Keyboard" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/SETTINGS_TAB_KEYBOARD/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="SETTINGS_TAB_JOYPAD" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/SETTINGS_TAB_JOYPAD"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_kyy7q")
horizontal_scroll_mode = 0

[node name="Joypad" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/SETTINGS_TAB_JOYPAD/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="SETTINGS_TAB_AUDIO" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 4

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/TabContainer/SETTINGS_TAB_AUDIO"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_kyy7q")
horizontal_scroll_mode = 0

[node name="Audio" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TabContainer/SETTINGS_TAB_AUDIO/ScrollContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 16

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32

[node name="BtnApply" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../../TabContainer")
focus_neighbor_right = NodePath("../BtnCancel")
theme_override_font_sizes/font_size = 25
text = "SETTINGS_APPLY"
clip_text = true

[node name="BtnCancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_left = NodePath("../BtnApply")
focus_neighbor_top = NodePath("../../TabContainer")
focus_neighbor_right = NodePath("../../../BtnResetBinds")
theme_override_font_sizes/font_size = 25
text = "SETTINGS_CANCEL"
clip_text = true

[node name="BtnResetBinds" type="Button" parent="MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
focus_neighbor_left = NodePath("../VBoxContainer/HBoxContainer/BtnCancel")
focus_neighbor_top = NodePath("../VBoxContainer/TabContainer")
theme_override_font_sizes/font_size = 25
text = "SETTINGS_RESET_BINDS"
clip_text = true

[connection signal="tab_changed" from="MarginContainer/VBoxContainer/TabContainer" to="." method="_on_tab_container_tab_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BtnApply" to="." method="_on_btn_apply_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BtnCancel" to="." method="_on_btn_cancel_pressed"]
[connection signal="pressed" from="MarginContainer/BtnResetBinds" to="." method="_on_btn_reset_binds_pressed"]
